@@ -1,17 +1,17 @@
 Package: gamboostLSS
 Type: Package
 Title: Boosting Methods for GAMLSS Models
-Version: 1.0-1
-Date: 2011-08-12
+Version: 1.0-2
+Date: 2011-08-31
 Author: Benjamin Hofner, Andreas Mayr, Nora Fenske, Matthias Schmid
 Maintainer: Benjamin Hofner <benjamin.hofner@imbe.med.uni-erlangen.de>
 Description: Boosting models for fitting generalized additive models
         for location, shape and scale (gamLSS models) to potentially
         high dimensional data.
-Depends: R (>= 2.9.0), splines, survival, methods, mboost (>= 2.0-0)
+Depends: R (>= 2.10.0), splines, survival, methods, mboost (>= 2.0-0)
 Suggests: gamlss
 LazyLoad: yes
 License: GPL-2
-Packaged: 2011-08-12 12:48:38 UTC; hofnerb
+Packaged: 2011-08-31 08:07:09 UTC; hofnerb
 Repository: CRAN
-Date/Publication: 2011-08-12 14:30:50
+Date/Publication: 2011-08-31 09:08:53
