@@ -1,14 +1,14 @@
-de0b72ed22b70bd17fcc69cab3eed1d8 *DESCRIPTION
+4c9798394d500ff294ab5e158eccb6c3 *DESCRIPTION
 f55ac9ec390adda0281cfa0706cf8894 *NAMESPACE
-b078382df99357aefc2c35815f6ffb1d *NEWS
+7908444151e8b5ef1174dd099a4d3c8f *NEWS
 d9d07ff1318c406cb977d5005d6f8417 *R/families.R
-20050aa134da1948532cc2bd1aa087a1 *R/mboostLSS.R
+2423654015fcb63eba274ea56869bfd4 *R/mboostLSS.R
 53fdd56c65f4be43270ccf1b9001615e *R/mboost_changes.R
 af3be1cbbaf0267bab8388b0c2117cdd *R/methods.R
-b078382df99357aefc2c35815f6ffb1d *inst/CHANGES
+7908444151e8b5ef1174dd099a4d3c8f *inst/CHANGES
 1f3f1cbf6f2dc331feb9dee39be76f8e *inst/CITATION
 20ccd708e59868241b4c9dcad4b433ac *man/families.Rd
-ed57bbf25f35ced06d4e9fd69d24d80f *man/gamboostLSS-package.Rd
+4b48bec5f0c177ae43672006416dd495 *man/gamboostLSS-package.Rd
 315f77bcdee4432574be05e272c58796 *man/mboostLSS.Rd
 0c292791d22a554aa2f003030a0ec749 *man/methods.Rd
 46d81f8b7af3572b90dc868044a6c5ee *tests/Examples/gamboostLSS-Ex.Rout.save
